[package]
name = "activeserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acix-web = "^4"
uuid = { version = "^0.8", features = ["v4"]}
serde = { version = "^1", features = ["derive"]}
aws-config = "^0.8"
aws-sdk-dynamodb = "^0.8"
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"